# FixMyShit

./: ## Copilot.md  .aider.chat.history.md  .aider.input.history  .gitignore  AGENT_PIPELINE.md  EMERGENCY_PROCEDURES.ps1  EMERGENCY_RECOVERY_GUIDE.md  EMERGENCY_RECOVERY_MASTER.ps1  EMERGENCY_RECOVERY_REPORT_20250614_114752.json  FINAL_SYSTEM_VALIDATION.ps1  T2000.ps1  azure.py  check_shell_overlays.ps1  clean_boot_test.ps1  compare_startup.ps1  critical_service_repair.ps1  deploy_agent.py  dir_cleaner  dir_cleaner.rs  emergency_cleanup.ps1  emergency_shell_repair.ps1  eventlogs.json  firewall_service_emergency_repair.ps1  fix_0x8a15000f_missing_data.ps1  install_dotnet_runtimes.ps1  joan-diagnose.ps1  joan_diagnose.ps1  mal-shit.json  malware_scan.ps1  projcli.py  recovery_verification.ps1  repair_shell.ps1  restore_dev_environment.ps1  restore_explorer.ps1  security_hardening.ps1  setup_cursor_ide.ps1  setup_monitoring.ps1  shell_com_diagnostic.ps1  system_backup.ps1  system_integrity.ps1  (+5 more)
.aider.tags.cache.v4/: cache.db
.cursor/: cursor-settings.json
PoirotDeux/: .cursorrules  Clean-OrphanedResources.ps1  Compare-RequiredVsExisting-FIXED.ps1  Compare-RequiredVsExisting.ps1  Estimate-ActualCosts.ps1  Generate-SmartBicepFromCSV.ps1  Generate-SmartDeployment.ps1  Investigate-ExistingAzureResources-FIXED.ps1  LaunchInvestigation.ps1  Setup-AzurePoirotComplete.ps1  Setup-CursorPoirot.ps1  WELCOME_TO_DETECTIVE_MODE.md  fixazlogin.ps1  nstall-cursor-mode.ps1  project-readme.md
dir-cleaner/: Cargo.toml  README.md
dir-cleaner/src/: main.rs
docs/: errors.md  plan.txt
(+71 files in other folders)
